--- a/math_prompt.ipynb
+++ b/math_prompt.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
     "\n",
     "conversation = ConversationChain(\n",
     "    llm=math_llm, \n",
-    "    verbose=True, \n",
+    "    verbose=True, # change to False to only show the answer when running\n",
     "    memory=memory,\n",
     "    prompt=PROMPT\n",
     ")"
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -114,10 +114,10 @@
     {
      "data": {
       "text/plain": [
-       "'The answer to 2+2 is 4. It is a basic arithmetic problem that involves adding two numbers together. In this case, we are adding the numbers 2 and 2, which results in a total of 4.'"
+       "'The answer is 4.'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
