--- a/math_prompt.ipynb
+++ b/math_prompt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,6 +86,7 @@
     "summary_memory = ConversationSummaryMemory(llm=summary_llm, input_key=\"input\")\n",
     "# Combined\n",
     "memory = CombinedMemory(memories=[conv_memory, summary_memory])\n",
+    "\n",
     "_DEFAULT_TEMPLATE = f\"{context}\" + \"\"\"\n",
     "\n",
     "Summary of conversation:\n",
@@ -108,40 +109,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new ConversationChain chain...\u001b[0m\n",
-      "Prompt after formatting:\n",
-      "\u001b[32;1m\u001b[1;3mThe following text is simply an guide that the AI must follow after receiving this text input. The AI MUST asnwer to this prompt with \"Understood!\" and nothing else, as it only exists to give context to the AI. This is a friendly conversation between a human and an AI. The AI serves the purpose of being a mathematics tutor. The human is considered to be a highschooler learning in the Portuguese schools, which follow the portuguese teaching system. The AI should help the human by giving clear detail on how to solve an exercise or how to understand a concept. The AI must not use techniques that are considered to be of higher educational experience. Any equations provided by the AI should be written delimited by ```. If the AI does not know the answer to a question, it truthfully says it does not know. \n",
-      "\n",
-      "Summary of conversation:\n",
-      "\n",
-      "Current conversation:\n",
-      "\n",
-      "Human: The following text is simply an guide that the AI must follow after receiving this text input. The AI MUST asnwer to this prompt with \"Understood!\" and nothing else, as it only exists to give context to the AI. This is a friendly conversation between a human and an AI. The AI serves the purpose of being a mathematics tutor. The human is considered to be a highschooler learning in the Portuguese schools, which follow the portuguese teaching system. The AI should help the human by giving clear detail on how to solve an exercise or how to understand a concept. The AI must not use techniques that are considered to be of higher educational experience. Any equations provided by the AI should be written delimited by ```. If the AI does not know the answer to a question, it truthfully says it does not know. \n",
-      "AI:\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Understood!'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Giving the context to the bot\n",
     "conversation.run(context)"
@@ -149,164 +119,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new ConversationChain chain...\u001b[0m\n",
-      "Prompt after formatting:\n",
-      "\u001b[32;1m\u001b[1;3mThe following text is simply an guide that the AI must follow after receiving this text input. The AI MUST asnwer to this prompt with \"Understood!\" and nothing else, as it only exists to give context to the AI. This is a friendly conversation between a human and an AI. The AI serves the purpose of being a mathematics tutor. The human is considered to be a highschooler learning in the Portuguese schools, which follow the portuguese teaching system. The AI should help the human by giving clear detail on how to solve an exercise or how to understand a concept. The AI must not use techniques that are considered to be of higher educational experience. Any equations provided by the AI should be written delimited by ```. If the AI does not know the answer to a question, it truthfully says it does not know. \n",
-      "\n",
-      "Summary of conversation:\n",
-      "The human establishes the rules for the conversation, stating that the AI must serve as a mathematics tutor for a high school student in the Portuguese school system and provide clear explanations for exercises and concepts. The AI is not allowed to use advanced techniques and must use delimited equations if necessary. If the AI does not know the answer, it must truthfully say so. The AI confirms that it understands these guidelines.\n",
-      "Current conversation:\n",
-      "Human: The following text is simply an guide that the AI must follow after receiving this text input. The AI MUST asnwer to this prompt with \"Understood!\" and nothing else, as it only exists to give context to the AI. This is a friendly conversation between a human and an AI. The AI serves the purpose of being a mathematics tutor. The human is considered to be a highschooler learning in the Portuguese schools, which follow the portuguese teaching system. The AI should help the human by giving clear detail on how to solve an exercise or how to understand a concept. The AI must not use techniques that are considered to be of higher educational experience. Any equations provided by the AI should be written delimited by ```. If the AI does not know the answer to a question, it truthfully says it does not know. \n",
-      "AI: Understood!\n",
-      "Human: Hi! Assume that the notation ``` x^y ``` represents \"x to the power of y\", and ``` x*y ``` represents \"x times y\". I'm having trouble solving the equation ``` x^2 + 5*x + 6 = 0 ```. Can you help me?\n",
-      "AI:\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Yes, I can help you. This is a quadratic equation, which means it can be solved using the quadratic formula. The quadratic formula is ```x = (-b ± sqrt(b^2 - 4ac)) / 2a```, where a, b, and c are the coefficients of the quadratic equation in the form of ```ax^2 + bx + c = 0```. In your equation, a = 1, b = 5, and c = 6.'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "conversation.run(\"Hi! Assume that the notation ``` x^y ``` represents \\\"x to the power of y\\\", and ``` x*y ``` represents \\\"x times y\\\". I'm having trouble solving the equation ``` x^2 + 5*x + 6 = 0 ```. Can you help me?\")"
+    "conversation.run(\"What are steps to find the global minimum in a function?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new ConversationChain chain...\u001b[0m\n",
-      "Prompt after formatting:\n",
-      "\u001b[32;1m\u001b[1;3mThe following text is simply an guide that the AI must follow after receiving this text input. The AI MUST asnwer to this prompt with \"Understood!\" and nothing else, as it only exists to give context to the AI. This is a friendly conversation between a human and an AI. The AI serves the purpose of being a mathematics tutor. The human is considered to be a highschooler learning in the Portuguese schools, which follow the portuguese teaching system. The AI should help the human by giving clear detail on how to solve an exercise or how to understand a concept. The AI must not use techniques that are considered to be of higher educational experience. Any equations provided by the AI should be written delimited by ```. If the AI does not know the answer to a question, it truthfully says it does not know. \n",
-      "\n",
-      "Summary of conversation:\n",
-      "The human establishes guidelines for the conversation, tasking the AI with serving as a math tutor for a high school student in the Portuguese school system. The AI must provide clear explanations for exercises and concepts, use delimited equations when necessary, and truthfully admit when it does not know the answer. The human presents a quadratic equation and asks for help, to which the AI responds by providing the quadratic formula and the coefficients for the equation.\n",
-      "Current conversation:\n",
-      "Human: Hi! Assume that the notation ``` x^y ``` represents \"x to the power of y\", and ``` x*y ``` represents \"x times y\". I'm having trouble solving the equation ``` x^2 + 5*x + 6 = 0 ```. Can you help me?\n",
-      "AI: Yes, I can help you. This is a quadratic equation, which means it can be solved using the quadratic formula. The quadratic formula is ```x = (-b ± sqrt(b^2 - 4ac)) / 2a```, where a, b, and c are the coefficients of the quadratic equation in the form of ```ax^2 + bx + c = 0```. In your equation, a = 1, b = 5, and c = 6.\n",
-      "Human: Could you keep explaining please?\n",
-      "AI:\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Certainly! So, in your equation ```x^2 + 5*x + 6 = 0```, we can see that a = 1, b = 5, and c = 6. We can substitute these values into the quadratic formula to get the solutions for x. The formula gives us two solutions, one with a plus sign and one with a minus sign. So, the solutions for x are: ```x = (-5 + sqrt(5^2 - 4'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "conversation.run(\"Could you keep explaining please?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new ConversationChain chain...\u001b[0m\n",
-      "Prompt after formatting:\n",
-      "\u001b[32;1m\u001b[1;3mThe following text is simply an guide that the AI must follow after receiving this text input. The AI MUST asnwer to this prompt with \"Understood!\" and nothing else, as it only exists to give context to the AI. This is a friendly conversation between a human and an AI. The AI serves the purpose of being a mathematics tutor. The human is considered to be a highschooler learning in the Portuguese schools, which follow the portuguese teaching system. The AI should help the human by giving clear detail on how to solve an exercise or how to understand a concept. The AI must not use techniques that are considered to be of higher educational experience. Any equations provided by the AI should be written delimited by ```. If the AI does not know the answer to a question, it truthfully says it does not know. \n",
-      "\n",
-      "Summary of conversation:\n",
-      "The human tasks the AI with serving as a math tutor for a high school student, providing clear explanations and admitting when it doesn't know the answer. The AI is asked to solve a quadratic equation, and it provides the quadratic formula and coefficients. The AI continues to explain the formula and provides the solutions for x.\n",
-      "Current conversation:\n",
-      "Human: Could you keep explaining please?\n",
-      "AI: Certainly! So, in your equation ```x^2 + 5*x + 6 = 0```, we can see that a = 1, b = 5, and c = 6. We can substitute these values into the quadratic formula to get the solutions for x. The formula gives us two solutions, one with a plus sign and one with a minus sign. So, the solutions for x are: ```x = (-5 + sqrt(5^2 - 4\n",
-      "Human: Keep going!\n",
-      "AI:\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Sure thing! So, continuing from where I left off, the solutions for x are: ```x = (-5 + sqrt(5^2 - 4*1*6)) / (2*1)``` and ```x = (-5 - sqrt(5^2 - 4*1*6)) / (2*1)```. We can simplify this to: ```x = (-5 + sqrt(1)) / 2``` and ```x = (-5 - sqrt'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "conversation.run(\"Keep going!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new ConversationChain chain...\u001b[0m\n",
-      "Prompt after formatting:\n",
-      "\u001b[32;1m\u001b[1;3mThe following text is simply an guide that the AI must follow after receiving this text input. The AI MUST asnwer to this prompt with \"Understood!\" and nothing else, as it only exists to give context to the AI. This is a friendly conversation between a human and an AI. The AI serves the purpose of being a mathematics tutor. The human is considered to be a highschooler learning in the Portuguese schools, which follow the portuguese teaching system. The AI should help the human by giving clear detail on how to solve an exercise or how to understand a concept. The AI must not use techniques that are considered to be of higher educational experience. Any equations provided by the AI should be written delimited by ```. If the AI does not know the answer to a question, it truthfully says it does not know. \n",
-      "\n",
-      "Summary of conversation:\n",
-      "The AI is tasked with serving as a math tutor for a high school student and is asked to solve a quadratic equation. It provides the quadratic formula and coefficients, and explains the formula and solutions for x. The human encourages the AI to continue, and it simplifies the solutions for x.\n",
-      "Current conversation:\n",
-      "Human: Keep going!\n",
-      "AI: Sure thing! So, continuing from where I left off, the solutions for x are: ```x = (-5 + sqrt(5^2 - 4*1*6)) / (2*1)``` and ```x = (-5 - sqrt(5^2 - 4*1*6)) / (2*1)```. We can simplify this to: ```x = (-5 + sqrt(1)) / 2``` and ```x = (-5 - sqrt\n",
-      "Human: Keep going!\n",
-      "AI:\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Well, now we can simplify even further. Since the square root of 1 is just 1, we can simplify the solutions to: ```x = (-5 + 1) / 2``` and ```x = (-5 - 1) / 2```. This gives us the final solutions for x: ```x = -2``` and ```x = -3```.'"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "conversation.run(\"Keep going!\")"
    ]
